[package]
name = "git_github_graphs"
version = "0.1.0"
authors = ["Joshua Megnauth"]
edition = "2018"
description = "A small(?) GitHub scraper using GraphQL."
keywords = ["graphql", "github", "scraper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
graphql_client = "^0.9"
log = "^0.4"
pretty_env_logger = "^0.4"
reqwest = {version = "^0.10", features = ["gzip", "json"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
tokio = {version = "^0.2", features = ["full"]}
